tests/files/invalid/lists/malformed_list.yumly
variable ;list[int] = [1, 2